--- a/index.html
+++ b/index.html
@@ -104,13 +104,13 @@
       font-size: 0.9rem;
       color: var(--text-muted);
     }
-
-    .nav-links > li {
-      list-style: none;
-      position: relative;
-      white-space: nowrap;
-    }
-
+    <nav class="nav-links">
+  <a href="index.html">Home</a>
+  <a href="about.html">About / CV / Contact</a>
+  <a href="projects.html">Projects</a>
+  <a href="analogue-film.html">Analogue Film Practice</a>
+  <a href="writing-publications.html">Writing &amp; Publications</a>
+</nav>
     .nav-links a {
       position: relative;
       padding-bottom: 2px;
