--- a/projects.html
+++ b/projects.html
@@ -1,1 +1,8 @@
+<nav class="nav-links">
+  <a href="index.html">Home</a>
+  <a href="about.html">About / CV / Contact</a>
+  <a href="projects.html">Projects</a>
+  <a href="analogue-film.html">Analogue Film Practice</a>
+  <a href="writing-publications.html">Writing &amp; Publications</a>
+</nav>
 
