--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     }
     <nav class="nav-links">
   <a href="index.html">Home</a>
-  <a href="about.html">About / CV / Contact</a>
+  <a href="about.html">About </a>
   <a href="projects.html">Projects</a>
   <a href="analogue-film.html">Analogue Film Practice</a>
   <a href="writing-publications.html">Writing &amp; Publications</a>
