--- a/photochemical-techniques.html
+++ b/photochemical-techniques.html
@@ -1,1 +1,42 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Mariana Torres – Portfolio</title>
+
+  <!-- Link to shared stylesheet -->
+  <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+
+  <!-- ===================== -->
+  <!--       NAVBAR          -->
+  <!-- ===================== -->
+  <header class="navbar">
+    <nav class="nav-links">
+      <!-- ⚠️ COLAR AQUI O NAV REAL DO INDEX.HTML -->
+      <!-- Example (replace with your real nav):
+      <a href="index.html">Home</a>
+      <a href="about.html">About / CV / Contact</a>
+      <a href="projects.html">Projects</a>
+      <a href="analogue-film.html">Analogue Film Practice</a>
+      <a href="writing-publications.html">Writing & Publications</a>
+      -->
+    </nav>
+  </header>
+
+
+  <!-- ===================== -->
+  <!--     PAGE CONTENT      -->
+  <!-- ===================== -->
+  <main class="page-content">
+    <h1>Page Title</h1>
+    <p>Content coming soon…</p>
+  </main>
+
+
+</body>
+</html>
