--- a/index.html
+++ b/index.html
@@ -106,11 +106,12 @@
     }
     <nav class="nav-links">
   <a href="index.html">Home</a>
-  <a href="about.html">About </a>
+  <a href="about.html">About / CV / Contact</a>
   <a href="projects.html">Projects</a>
   <a href="analogue-film.html">Analogue Film Practice</a>
-  <a href="writing-publications.html">Writing &amp; Publications</a>
+  <a href="writing.html">Writing & Publications</a>
 </nav>
+
     .nav-links a {
       position: relative;
       padding-bottom: 2px;
