--- a/index.html
+++ b/index.html
@@ -1,17 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mariana Torres – Portfolio</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <!-- TITLES: BEBAS KAI -->
-  <link href="https://fonts.cdnfonts.com/css/bebas-kai" rel="stylesheet" />
-  <!-- BODY: SOURCE SERIF 4 -->
-  <link
-    href="https://fonts.googleapis.com/css2?family=Source+Serif+4:wght@300;400;500;600&display=swap"
-    rel="stylesheet"
-  />
+  <!-- FONTS -->
+  <link href="https://fonts.cdnfonts.com/css/bebas-kai" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Source+Serif+4:wght@300;400;500;600&display=swap" rel="stylesheet">
 
   <style>
     :root {
@@ -32,8 +28,7 @@
       margin: 0;
       background: radial-gradient(circle at top, #141623 0, #050608 55%);
       color: var(--text-main);
-      font-family: "Source Serif 4", Georgia, "Times New Roman", serif;
-      -webkit-font-smoothing: antialiased;
+      font-family: "Source Serif 4", serif;
     }
 
     a {
@@ -41,54 +36,35 @@
       text-decoration: none;
     }
 
-    h1, h2, h3, h4 {
-      font-family: "Bebas Kai", system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
+    h1, h2, h3 {
+      font-family: "Bebas Kai", sans-serif;
       letter-spacing: 0.08em;
       text-transform: uppercase;
       margin: 0;
-    }
-
-    p {
-      margin: 0 0 0.8rem;
-      line-height: 1.7;
-      font-size: 0.98rem;
-    }
-
-    .shell {
-      max-width: var(--max-width);
-      margin: 0 auto;
-      padding: 18px 18px 60px;
-    }
-
-    @media (min-width: 768px) {
-      .shell {
-        padding: 28px 24px 80px;
-      }
     }
 
     /* NAVBAR */
     .navbar {
       position: sticky;
       top: 0;
-      z-index: 20;
+      z-index: 10;
       background: rgba(5, 6, 8, 0.96);
-      backdrop-filter: blur(16px);
+      backdrop-filter: blur(14px);
       border-bottom: 1px solid rgba(255, 255, 255, 0.06);
     }
 
     .navbar-inner {
       max-width: var(--max-width);
       margin: 0 auto;
-      padding: 10px 18px;
+      padding: 12px 20px;
       display: flex;
       align-items: center;
       justify-content: space-between;
-      gap: 16px;
     }
 
     .nav-logo {
       font-family: "Bebas Kai", sans-serif;
-      font-size: 1.1rem;
+      font-size: 1.2rem;
       letter-spacing: 0.18em;
     }
 
@@ -98,19 +74,10 @@
 
     .nav-links {
       display: flex;
-      flex-wrap: wrap;
-      align-items: center;
-      gap: 12px 18px;
+      gap: 18px;
       font-size: 0.9rem;
       color: var(--text-muted);
     }
-    <nav class="nav-links">
-  <a href="index.html">Home</a>
-  <a href="about.html">About / CV / Contact</a>
-  <a href="projects.html">Projects</a>
-  <a href="analogue-film.html">Analogue Film Practice</a>
-  <a href="writing.html">Writing & Publications</a>
-</nav>
 
     .nav-links a {
       position: relative;
@@ -125,206 +92,75 @@
       width: 0;
       height: 1px;
       background: var(--accent);
-      transition: width 0.16s ease-out;
+      transition: 0.2s ease;
     }
 
-    .nav-links a:hover::after,
-    .nav-links a[aria-current="page"]::after {
+    .nav-links a:hover::after {
       width: 100%;
     }
 
-    /* DROPDOWNS */
-
-    .has-submenu > button {
-      background: none;
-      border: none;
-      padding: 0;
-      font: inherit;
-      color: var(--text-muted);
-      cursor: pointer;
-      position: relative;
-    }
-
-    .has-submenu > button::after {
-      content: "▾";
-      font-size: 0.7rem;
-      margin-left: 4px;
-    }
-
-    .submenu {
-      position: absolute;
-      top: 1.6rem;
-      left: 0;
-      background: var(--bg-soft);
-      border: 1px solid rgba(255, 255, 255, 0.12);
-      min-width: 210px;
-      padding: 6px 10px;
-      display: none;
-      flex-direction: column;
-      gap: 4px;
-      z-index: 30;
-    }
-
-    .submenu a {
-      font-size: 0.86rem;
-      color: var(--text-muted);
-    }
-
-    .submenu a:hover::after {
-      width: 0; /* sem sublinhado animado aqui */
-    }
-
-    .submenu a:hover {
-      color: var(--accent);
-    }
-
-    .has-submenu:hover .submenu {
-      display: flex;
-    }
-
-    /* HERO SIMPLES */
-
+    /* HERO SECTION (vamos ajustar o design mais tarde) */
     .hero {
-      padding: 40px 18px 30px;
-      text-align: left;
+      text-align: center;
+      padding: 90px 20px 60px;
     }
 
     .hero-title {
       font-size: 3rem;
-      margin-bottom: 0.2rem;
-    }
-
-    @media (min-width: 768px) {
-      .hero-title {
-        font-size: 3.4rem;
-      }
+      margin-bottom: 10px;
     }
 
     .hero-subtitle {
-      font-size: 1.05rem;
+      font-size: 1.1rem;
       color: var(--text-muted);
-      max-width: 40rem;
-      margin-bottom: 1.1rem;
+      max-width: 600px;
+      margin: 0 auto 20px;
+      line-height: 1.6;
     }
 
-    .hero-meta {
-      font-size: 0.92rem;
-      color: var(--text-muted);
-    }
-
-    .hero-meta span {
-      margin-right: 1.2rem;
-    }
-
-    section {
-      padding: 26px 0;
-      border-top: 1px solid rgba(255, 255, 255, 0.06);
-    }
-
-    .section-title {
-      font-size: 1.5rem;
-      color: var(--accent);
-      margin-bottom: 0.3rem;
-    }
-
-    .section-subtitle {
-      font-size: 0.95rem;
-      color: var(--text-muted);
-      margin-bottom: 1rem;
-    }
-
-    .footer {
-      padding: 20px 18px 10px;
-      border-top: 1px solid rgba(255, 255, 255, 0.06);
-      font-size: 0.8rem;
-      color: var(--text-muted);
+    footer {
       text-align: center;
-    }
-
-    .shell-footer {
-      max-width: var(--max-width);
-      margin: 0 auto;
+      padding: 20px;
+      font-size: 0.85rem;
+      color: var(--text-muted);
+      border-top: 1px solid rgba(255,255,255,0.06);
     }
   </style>
 </head>
+
 <body>
+
   <!-- NAVBAR -->
   <header class="navbar">
     <div class="navbar-inner">
       <div class="nav-logo">MARIANA <span>TORRES</span></div>
 
-      <ul class="nav-links">
-        <li><a href="index.html" aria-current="page">Home</a></li>
-        <li><a href="about.html">About</a></li>
-
-        <!-- PROJECTS + subpáginas -->
-        <li class="has-submenu">
-          <button type="button">Projects</button>
-          <div class="submenu">
-            <a href="projects.html">Overview – Projects</a>
-            <a href="artistic-works.html">Artistic Works</a>
-            <a href="research-preservation.html">Research &amp; Preservation Works</a>
-          </div>
-        </li>
-
-        <!-- ANALOGUE FILM PRACTICE + subpáginas -->
-        <li class="has-submenu">
-          <button type="button">Analogue Film Practice</button>
-          <div class="submenu">
-            <a href="analogue-film.html">Overview – Analogue Practice</a>
-            <a href="photochemical-techniques.html">Photochemical Techniques</a>
-            <a href="technical-documentation.html">Technical Documentation</a>
-            <a href="darkroom-lab.html">Darkroom / Lab Work</a>
-            <a href="lab-notes.html">Lab Notes (Journal)</a>
-          </div>
-        </li>
-
-        <li><a href="writing-publications.html">Writing &amp; Publications</a></li>
-        <li><a href="visual-portfolio.html">Visual Portfolio</a></li>
-        <li><a href="cv.html">CV</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
+      <nav class="nav-links">
+        <a href="index.html">Home</a>
+        <a href="about.html">About / CV / Contact</a>
+        <a href="projects.html">Projects</a>
+        <a href="analogue-film.html">Analogue Film Practice</a>
+        <a href="writing-publications.html">Writing & Publications</a>
+      </nav>
     </div>
   </header>
 
-  <!-- CONTEÚDO PRINCIPAL DA HOME -->
-  <main class="shell">
-    <section class="hero">
-      <h1 class="hero-title">Audiovisual Archivist &amp; Film Practitioner</h1>
-      <p class="hero-subtitle">
-        Portfolio of artistic work, research projects and analogue film practice by
-        Mariana Torres. Focused on film preservation, photochemical techniques and
-        experimental approaches to the moving image.
-      </p>
-      <div class="hero-meta">
-        <span>📍 Lisbon, Portugal</span>
-        <span>🌍 PT · ES · EN</span>
-      </div>
-    </section>
+  <!-- HERO SECTION -->
+  <section class="hero">
+    <h1 class="hero-title">Audiovisual Archivist & Film Practitioner</h1>
+    <p class="hero-subtitle">
+      Exploring analogue film, archival methodologies and expanded moving-image practice.  
+      Research, artistic work and technical experimentation across film materiality.
+    </p>
+  </section>
 
-    <section>
-      <h2 class="section-title">Welcome</h2>
-      <p class="section-subtitle">
-        This website gathers selected projects across artistic work, archival research,
-        analogue film practice and writing.
-      </p>
-      <p>
-        Use the navigation above to explore each area. The sections <em>Projects</em> and
-        <em>Analogue Film Practice</em> open sub-pages where you can browse more specific
-        bodies of work, from film performances and restorations to technical notes and
-        darkroom experiments.
-      </p>
-    </section>
-  </main>
-
-  <footer class="footer">
-    <div class="shell-footer">
-      © <span id="year"></span> Mariana Torres · Artistic Work &amp; Research in the Moving Image
-    </div>
+  <footer>
+    © <span id="year"></span> Mariana Torres
   </footer>
 
   <script>
     document.getElementById("year").textContent = new Date().getFullYear();
   </script>
+
 </body>
 </html>
