--- a/index.html
+++ b/index.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mariana Torres – Portfolio</title>
+  <meta charset="UTF-8" />
+  <title>Mariana Torres – Home</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta
+    name="description"
+    content="Portfolio of Mariana Torres – audiovisual archivist and film practitioner working with analogue film, preservation and technical operations."
+  />
 
-  <!-- FONTS -->
-  <link href="https://fonts.cdnfonts.com/css/bebas-kai" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Source+Serif+4:wght@300;400;500;600&display=swap" rel="stylesheet">
+  <!-- Titles: Bebas Kai -->
+  <link href="https://fonts.cdnfonts.com/css/bebas-kai" rel="stylesheet" />
+  <!-- Text: Source Serif 4 -->
+  <link
+    href="https://fonts.googleapis.com/css2?family=Source+Serif+4:wght@300;400;500;600&display=swap"
+    rel="stylesheet"
+  />
 
   <style>
     :root {
@@ -23,60 +31,13 @@
       box-sizing: border-box;
       scroll-behavior: smooth;
     }
-/* NAV items base */
-.nav-links {
-  display: flex;
-  gap: 16px;
-  align-items: center;
-}
-
-/* Se já existia .nav-links, mantém o que tens e só garante que tem display:flex e gap, sem apagar o resto */
-
-.nav-item {
-  position: relative;
-  font-size: 0.9rem;
-}
-
-.nav-item > a {
-  text-decoration: none;
-  padding-bottom: 2px;
-}
-
-/* DROPDOWN BASE */
-.has-dropdown .dropdown-menu {
-  display: none;
-  position: absolute;
-  top: 100%;
-  left: 0;
-  min-width: 200px;
-  background: rgba(5, 6, 8, 0.97);  /* ajusta se o teu fundo for claro */
-  border: 1px solid rgba(255, 255, 255, 0.08);
-  padding: 8px 0;
-  z-index: 30;
-}
-
-.has-dropdown .dropdown-menu a {
-  display: block;
-  padding: 6px 14px;
-  font-size: 0.9rem;
-  white-space: nowrap;
-}
-
-/* Mostrar dropdown ao passar o rato */
-.nav-item.has-dropdown:hover .dropdown-menu {
-  display: block;
-}
-
-/* Hover simples */
-.nav-item a:hover {
-  text-decoration: underline;
-}
 
     body {
       margin: 0;
       background: radial-gradient(circle at top, #141623 0, #050608 55%);
       color: var(--text-main);
-      font-family: "Source Serif 4", serif;
+      font-family: "Source Serif 4", Georgia, "Times New Roman", serif;
+      -webkit-font-smoothing: antialiased;
     }
 
     a {
@@ -84,35 +45,59 @@
       text-decoration: none;
     }
 
-    h1, h2, h3 {
-      font-family: "Bebas Kai", sans-serif;
+    h1, h2, h3, h4 {
+      font-family: "Bebas Kai", system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
       letter-spacing: 0.08em;
       text-transform: uppercase;
       margin: 0;
     }
 
+    p {
+      margin: 0 0 0.8rem;
+      line-height: 1.7;
+      font-size: 0.98rem;
+    }
+
+    .page {
+      min-height: 100vh;
+    }
+
+    .shell {
+      max-width: var(--max-width);
+      margin: 0 auto;
+      padding: 18px 18px 60px;
+    }
+
+    @media (min-width: 768px) {
+      .shell {
+        padding: 26px 24px 80px;
+      }
+    }
+
     /* NAVBAR */
+
     .navbar {
       position: sticky;
       top: 0;
-      z-index: 10;
+      z-index: 20;
       background: rgba(5, 6, 8, 0.96);
-      backdrop-filter: blur(14px);
+      backdrop-filter: blur(16px);
       border-bottom: 1px solid rgba(255, 255, 255, 0.06);
     }
 
     .navbar-inner {
       max-width: var(--max-width);
       margin: 0 auto;
-      padding: 12px 20px;
+      padding: 10px 18px;
       display: flex;
       align-items: center;
       justify-content: space-between;
+      gap: 16px;
     }
 
     .nav-logo {
       font-family: "Bebas Kai", sans-serif;
-      font-size: 1.2rem;
+      font-size: 1.1rem;
       letter-spacing: 0.18em;
     }
 
@@ -121,10 +106,17 @@
     }
 
     .nav-links {
-      display: flex;
+      display: none;
       gap: 18px;
       font-size: 0.9rem;
       color: var(--text-muted);
+      align-items: center;
+    }
+
+    @media (min-width: 860px) {
+      .nav-links {
+        display: flex;
+      }
     }
 
     .nav-links a {
@@ -140,93 +132,189 @@
       width: 0;
       height: 1px;
       background: var(--accent);
-      transition: 0.2s ease;
+      transition: width 0.16s ease-out;
     }
 
     .nav-links a:hover::after {
       width: 100%;
     }
 
-    /* HERO SECTION (vamos ajustar o design mais tarde) */
+    /* DROPDOWN MENU */
+
+    .nav-item {
+      position: relative;
+    }
+
+    .dropdown-toggle {
+      cursor: pointer;
+      display: inline-block;
+    }
+
+    .dropdown-menu {
+      position: absolute;
+      top: 110%;
+      left: 0;
+      min-width: 190px;
+      background: #0c0f18;
+      border: 1px solid rgba(255, 255, 255, 0.1);
+      padding: 8px 0;
+      display: none;
+      flex-direction: column;
+      font-size: 0.86rem;
+      z-index: 30;
+    }
+
+    .dropdown-menu a {
+      padding: 6px 12px;
+      color: var(--text-muted);
+      white-space: nowrap;
+    }
+
+    .dropdown-menu a:hover {
+      background: rgba(255, 255, 255, 0.04);
+      color: var(--accent);
+    }
+
+    .nav-item:hover .dropdown-menu {
+      display: flex;
+    }
+
+    /* HERO (HOME) */
+
     .hero {
+      min-height: 70vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
       text-align: center;
-      padding: 90px 20px 60px;
+      padding: 40px 18px 30px;
+      position: relative;
+      overflow: hidden;
+    }
+
+    .hero::before {
+      /* aqui depois podes trocar por uma imagem real com CSS background-image */
+      content: "";
+      position: absolute;
+      inset: 0;
+      background:
+        radial-gradient(circle at 20% 20%, rgba(248, 210, 80, 0.35), transparent 55%),
+        radial-gradient(circle at 70% 40%, rgba(120, 211, 255, 0.35), transparent 55%),
+        radial-gradient(circle at 50% 100%, rgba(0, 0, 0, 0.9), #050608 80%);
+      opacity: 0.9;
+      z-index: -1;
+    }
+
+    .hero-inner {
+      max-width: 720px;
+      margin: 0 auto;
+    }
+
+    .hero-tag {
+      font-size: 0.85rem;
+      color: var(--text-muted);
+      margin-bottom: 0.6rem;
     }
 
     .hero-title {
       font-size: 3rem;
-      margin-bottom: 10px;
+      margin-bottom: 0.3rem;
+    }
+
+    @media (min-width: 768px) {
+      .hero-title {
+        font-size: 3.3rem;
+      }
     }
 
     .hero-subtitle {
-      font-size: 1.1rem;
+      font-size: 1rem;
       color: var(--text-muted);
-      max-width: 600px;
-      margin: 0 auto 20px;
-      line-height: 1.6;
+      margin-bottom: 0.8rem;
     }
 
-    footer {
-      text-align: center;
-      padding: 20px;
-      font-size: 0.85rem;
+    .hero-extra {
+      font-size: 0.95rem;
       color: var(--text-muted);
-      border-top: 1px solid rgba(255,255,255,0.06);
+    }
+
+    .hero-extra span {
+      display: inline-block;
+      margin: 0 0.4rem;
+    }
+
+    /* FOOTER */
+
+    .footer {
+      padding: 20px 0 0;
+      border-top: 1px solid rgba(255, 255, 255, 0.06);
+      font-size: 0.8rem;
+      color: var(--text-muted);
+      text-align: center;
+      margin-top: 10px;
     }
   </style>
 </head>
-
 <body>
+  <div class="page">
+    <!-- NAVBAR -->
+    <header class="navbar">
+      <div class="navbar-inner">
+        <div class="nav-logo">MARIANA <span>TORRES</span></div>
+        <nav class="nav-links">
+          <a href="index.html">Home</a>
+          <a href="about.html">About</a>
 
- <nav class="nav-links">
-  <div class="nav-item">
-    <a href="index.html">Home</a>
+          <div class="nav-item">
+            <span class="dropdown-toggle">Projects ▾</span>
+            <div class="dropdown-menu">
+              <a href="artistic-works.html">Artistic Works</a>
+              <a href="research-preservation.html">Research &amp; Preservation Works</a>
+            </div>
+          </div>
+
+          <div class="nav-item">
+            <span class="dropdown-toggle">Analogue Film Practice ▾</span>
+            <div class="dropdown-menu">
+              <a href="photochemical-techniques.html">Photochemical Techniques</a>
+              <a href="technical-documentation.html">Technical Documentation</a>
+              <a href="darkroom-lab.html">Darkroom / Lab Work</a>
+              <a href="lab-notes.html">Lab Notes</a>
+            </div>
+          </div>
+
+          <a href="writing.html">Writing &amp; Publications</a>
+        </nav>
+      </div>
+    </header>
+
+    <!-- MAIN CONTENT -->
+    <main class="shell">
+      <section class="hero">
+        <div class="hero-inner">
+          <div class="hero-tag">Artistic work · analogue film · archival practice</div>
+          <h1 class="hero-title">Mariana Torres</h1>
+          <p class="hero-subtitle">
+            Audiovisual archivist and film practitioner working between analogue film techniques,
+            preservation, and experimental moving image.
+          </p>
+          <p class="hero-extra">
+            <span>Lisbon-based</span>·
+            <span>Analogue film · 16mm &amp; 35mm</span>·
+            <span>Research, preservation &amp; artistic practice</span>
+          </p>
+        </div>
+      </section>
+
+      <div class="footer">
+        © <span id="year"></span> Mariana Torres · Analogue Film &amp; Archival Practice
+      </div>
+    </main>
   </div>
-
-  <div class="nav-item">
-    <a href="about.html">About</a>
-  </div>
-
-  <div class="nav-item has-dropdown">
-    <a href="projects.html">Projects</a>
-    <div class="dropdown-menu">
-      <a href="artistic-works.html">Artistic Works</a>
-      <a href="research-preservation.html">Research &amp; Preservation Works</a>
-    </div>
-  </div>
-
-  <div class="nav-item has-dropdown">
-    <a href="analogue-film.html">Analogue Film Practice</a>
-    <div class="dropdown-menu">
-      <a href="photochemical-techniques.html">Photochemical Techniques</a>
-      <a href="technical-documentation.html">Technical Documentation</a>
-      <a href="darkroom-lab.html">Darkroom / Lab Work</a>
-      <!-- Aqui pode aparecer uma âncora dentro de analogue-film.html se quiseres ter "Lab Notes" como secção interna -->
-      <!-- <a href="analogue-film.html#lab-notes">Lab Notes</a> -->
-    </div>
-  </div>
-
-  <div class="nav-item">
-    <a href="writing.html">Writing &amp; Publications</a>
-  </div>
-</nav>
-
-  <!-- HERO SECTION -->
-  <section class="hero">
-    <h1 class="hero-title">Audiovisual Archivist & Film Practitioner</h1>
-    <p class="hero-subtitle">
-      Exploring analogue film, archival methodologies and expanded moving-image practice.  
-      Research, artistic work and technical experimentation across film materiality.
-    </p>
-  </section>
-
-  <footer>
-    © <span id="year"></span> Mariana Torres
-  </footer>
 
   <script>
     document.getElementById("year").textContent = new Date().getFullYear();
   </script>
-
 </body>
 </html>
+
