--- a/index.html
+++ b/index.html
@@ -258,35 +258,42 @@
 <body>
   <div class="page">
     <!-- NAVBAR -->
-    <header class="navbar">
-      <div class="navbar-inner">
-        <div class="nav-logo">MARIANA <span>TORRES</span></div>
-        <nav class="nav-links">
-          <a href="index.html">Home</a>
-          <a href="about.html">About</a>
+ <header class="navbar">
+  <div class="navbar-inner">
 
-          <div class="nav-item">
-            <span class="dropdown-toggle">Projects ▾</span>
-            <div class="dropdown-menu">
-              <a href="artistic-works.html">Artistic Works</a>
-              <a href="research-preservation.html">Research &amp; Preservation Works</a>
-            </div>
-          </div>
+    <!-- LOGO / NOME À ESQUERDA -->
+    <div class="nav-logo">MARIANA <span>TORRES</span></div>
 
-          <div class="nav-item">
-            <span class="dropdown-toggle">Analogue Film Practice ▾</span>
-            <div class="dropdown-menu">
-              <a href="photochemical-techniques.html">Photochemical Techniques</a>
-              <a href="technical-documentation.html">Technical Documentation</a>
-              <a href="darkroom-lab.html">Darkroom / Lab Work</a>
-              <a href="lab-notes.html">Lab Notes</a>
-            </div>
-          </div>
+    <!-- MENU À DIREITA -->
+    <nav class="nav-links">
 
-          <a href="writing.html">Writing &amp; Publications</a>
-        </nav>
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+
+      <div class="nav-item">
+        <span class="dropdown-toggle">Projects ▾</span>
+        <div class="dropdown-menu">
+          <a href="artistic-works.html">Artistic Works</a>
+          <a href="research-preservation.html">Research &amp; Preservation Works</a>
+        </div>
       </div>
-    </header>
+
+      <div class="nav-item">
+        <span class="dropdown-toggle">Analogue Film Practice ▾</span>
+        <div class="dropdown-menu">
+          <a href="photochemical-techniques.html">Photochemical Techniques</a>
+          <a href="technical-documentation.html">Technical Documentation</a>
+          <a href="darkroom-lab.html">Darkroom / Lab Work</a>
+          <!-- Lab Notes integrado aqui -->
+          <a href="lab-notes.html">Lab Notes</a>
+        </div>
+      </div>
+
+      <a href="writing.html">Writing &amp; Publications</a>
+
+    </nav>
+  </div>
+</header>
 
     <!-- MAIN CONTENT -->
     <main class="shell">
