--- a/index.html
+++ b/index.html
@@ -256,6 +256,9 @@
   </style>
 </head>
 <body>
+  <div id="navbar-placeholder"></div>
+<script src="navbar-loader.js"></script>
+
   <div class="page">
     <!-- NAVBAR -->
  <header class="navbar">
