--- a/artistic-works.html
+++ b/artistic-works.html
@@ -168,6 +168,9 @@
   </style>
 </head>
 <body>
+  <div id="navbar-placeholder"></div>
+<script src="navbar-loader.js"></script>
+
   <div class="page">
     <!-- NAVBAR (igual em todas as páginas) -->
     <header class="navbar">
