--- a/index.html
+++ b/index.html
@@ -2,27 +2,29 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Mariana Torres – Home</title>
+  <title>Mariana Torres – Portfolio</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta
     name="description"
-    content="Portfolio of Mariana Torres – audiovisual archivist and film practitioner working with analogue film, preservation and technical operations."
+    content="Portfolio of Mariana Torres – audiovisual archivist and moving image practitioner."
   />
 
-  <!-- Titles: Bebas Kai -->
+  <!-- Fonts -->
   <link href="https://fonts.cdnfonts.com/css/bebas-kai" rel="stylesheet" />
-  <!-- Text: Source Serif 4 -->
   <link
     href="https://fonts.googleapis.com/css2?family=Source+Serif+4:wght@300;400;500;600&display=swap"
     rel="stylesheet"
   />
 
+  <!-- Navbar loader (carrega navbar.html para dentro do header) -->
+  <script src="navbar-loader.js" defer></script>
+
   <style>
     :root {
       --bg: #050608;
-      --bg-soft: #090b10;
+      --bg-soft: #0b0e14;
       --text-main: #f5f5f5;
-      --text-muted: #a6a9b5;
+      --text-muted: #b0b2bf;
       --accent: #78d3ff;
       --max-width: 1100px;
     }
@@ -34,7 +36,7 @@
 
     body {
       margin: 0;
-      background: radial-gradient(circle at top, #141623 0, #050608 55%);
+      background: radial-gradient(circle at top, #171a28 0, #050608 55%);
       color: var(--text-main);
       font-family: "Source Serif 4", Georgia, "Times New Roman", serif;
       -webkit-font-smoothing: antialiased;
@@ -45,286 +47,112 @@
       text-decoration: none;
     }
 
-    h1, h2, h3, h4 {
-      font-family: "Bebas Kai", system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
-      letter-spacing: 0.08em;
-      text-transform: uppercase;
-      margin: 0;
-    }
-
-    p {
-      margin: 0 0 0.8rem;
-      line-height: 1.7;
-      font-size: 0.98rem;
-    }
-
-    .page {
-      min-height: 100vh;
-    }
-
-    .shell {
+    main {
       max-width: var(--max-width);
       margin: 0 auto;
-      padding: 18px 18px 60px;
+      padding: 40px 18px 60px;
     }
 
     @media (min-width: 768px) {
-      .shell {
-        padding: 26px 24px 80px;
+      main {
+        padding: 60px 24px 80px;
       }
     }
 
-    /* NAVBAR */
-
-    .navbar {
-      position: sticky;
-      top: 0;
-      z-index: 20;
-      background: rgba(5, 6, 8, 0.96);
-      backdrop-filter: blur(16px);
-      border-bottom: 1px solid rgba(255, 255, 255, 0.06);
-    }
-
-    .navbar-inner {
-      max-width: var(--max-width);
-      margin: 0 auto;
-      padding: 10px 18px;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      gap: 16px;
-    }
-
-    .nav-logo {
-      font-family: "Bebas Kai", sans-serif;
-      font-size: 1.1rem;
-      letter-spacing: 0.18em;
-    }
-
-    .nav-logo span {
-      color: var(--accent);
-    }
-
-    .nav-links {
-      display: none;
-      gap: 18px;
-      font-size: 0.9rem;
-      color: var(--text-muted);
-      align-items: center;
-    }
-
-    @media (min-width: 860px) {
-      .nav-links {
-        display: flex;
-      }
-    }
-
-    .nav-links a {
-      position: relative;
-      padding-bottom: 2px;
-    }
-
-    .nav-links a::after {
-      content: "";
-      position: absolute;
-      left: 0;
-      bottom: 0;
-      width: 0;
-      height: 1px;
-      background: var(--accent);
-      transition: width 0.16s ease-out;
-    }
-
-    .nav-links a:hover::after {
-      width: 100%;
-    }
-
-    /* DROPDOWN MENU */
-
-    .nav-item {
-      position: relative;
-    }
-
-    .dropdown-toggle {
-      cursor: pointer;
-      display: inline-block;
-    }
-
-    .dropdown-menu {
-      position: absolute;
-      top: 110%;
-      left: 0;
-      min-width: 190px;
-      background: #0c0f18;
-      border: 1px solid rgba(255, 255, 255, 0.1);
-      padding: 8px 0;
-      display: none;
-      flex-direction: column;
-      font-size: 0.86rem;
-      z-index: 30;
-    }
-
-    .dropdown-menu a {
-      padding: 6px 12px;
-      color: var(--text-muted);
-      white-space: nowrap;
-    }
-
-    .dropdown-menu a:hover {
-      background: rgba(255, 255, 255, 0.04);
-      color: var(--accent);
-    }
-
-    .nav-item:hover .dropdown-menu {
-      display: flex;
-    }
-
-    /* HERO (HOME) */
+    /* HERO / CAPA */
 
     .hero {
-      min-height: 70vh;
+      min-height: calc(100vh - 80px);
       display: flex;
       align-items: center;
       justify-content: center;
       text-align: center;
-      padding: 40px 18px 30px;
       position: relative;
-      overflow: hidden;
+      padding: 40px 16px;
     }
 
     .hero::before {
-      /* aqui depois podes trocar por uma imagem real com CSS background-image */
+      /* Depois trocamos isto por uma imagem tua se quiseres */
       content: "";
       position: absolute;
       inset: 0;
       background:
-        radial-gradient(circle at 20% 20%, rgba(248, 210, 80, 0.35), transparent 55%),
-        radial-gradient(circle at 70% 40%, rgba(120, 211, 255, 0.35), transparent 55%),
+        radial-gradient(circle at 20% 15%, rgba(120, 211, 255, 0.35), transparent 55%),
+        radial-gradient(circle at 80% 20%, rgba(248, 210, 80, 0.28), transparent 55%),
         radial-gradient(circle at 50% 100%, rgba(0, 0, 0, 0.9), #050608 80%);
-      opacity: 0.9;
+      opacity: 0.95;
       z-index: -1;
     }
 
     .hero-inner {
-      max-width: 720px;
+      max-width: 640px;
       margin: 0 auto;
     }
 
-    .hero-tag {
-      font-size: 0.85rem;
-      color: var(--text-muted);
-      margin-bottom: 0.6rem;
-    }
-
-    .hero-title {
-      font-size: 3rem;
+    .hero-name {
+      font-family: "Bebas Kai", system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
+      font-size: 2.6rem;
+      letter-spacing: 0.18em;
+      text-transform: uppercase;
       margin-bottom: 0.3rem;
     }
 
-    @media (min-width: 768px) {
-      .hero-title {
-        font-size: 3.3rem;
-      }
-    }
-
-    .hero-subtitle {
-      font-size: 1rem;
+    .hero-role {
+      font-size: 1.05rem;
       color: var(--text-muted);
-      margin-bottom: 0.8rem;
+      margin-bottom: 1.5rem;
     }
 
-    .hero-extra {
-      font-size: 0.95rem;
+    .hero-text {
+      font-size: 0.98rem;
+      line-height: 1.7;
+      color: var(--text-main);
+      margin-bottom: 1.8rem;
+    }
+
+    .hero-meta {
+      font-size: 0.9rem;
       color: var(--text-muted);
     }
 
-    .hero-extra span {
-      display: inline-block;
-      margin: 0 0.4rem;
-    }
-
-    /* FOOTER */
-
-    .footer {
-      padding: 20px 0 0;
-      border-top: 1px solid rgba(255, 255, 255, 0.06);
-      font-size: 0.8rem;
-      color: var(--text-muted);
-      text-align: center;
-      margin-top: 10px;
+    .hero-meta span + span {
+      margin-left: 1.1rem;
     }
   </style>
 </head>
+
 <body>
-  <div id="navbar-placeholder"></div>
-<script src="navbar-loader.js"></script>
+  <!-- NAVBAR: será injetado aqui pelo navbar-loader.js -->
+  <header id="navbar-container"></header>
 
-  <div class="page">
-    <!-- NAVBAR -->
- <header class="navbar">
-  <div class="navbar-inner">
+  <main>
+    <section class="hero">
+      <div class="hero-inner">
+        <div class="hero-name">Mariana Torres</div>
+        <div class="hero-role">
+          Audiovisual Archivist &amp; Moving Image Practitioner
+        </div>
 
-    <!-- LOGO / NOME À ESQUERDA -->
-    <div class="nav-logo">MARIANA <span>TORRES</span></div>
+        <p class="hero-text">
+          I work between <strong>film archives, analogue technologies and moving image
+          practice</strong>. My interests cross preservation, projection, photochemical
+          experimentation and the afterlives of militant and countercultural cinema.
+        </p>
 
-    <!-- MENU À DIREITA -->
-    <nav class="nav-links">
+        <p class="hero-text">
+          This portfolio gathers <strong>artistic works, research and analogue film
+          practice</strong>, alongside documentation of projects developed with archives,
+          festivals and cultural institutions.
+        </p>
 
-      <a href="index.html">Home</a>
-      <a href="about.html">About</a>
-
-      <div class="nav-item">
-        <span class="dropdown-toggle">Projects ▾</span>
-        <div class="dropdown-menu">
-          <a href="artistic-works.html">Artistic Works</a>
-          <a href="research-preservation.html">Research &amp; Preservation Works</a>
+        <div class="hero-meta">
+          <span>Based in Lisbon</span>
+          <span>PT · ES · EN</span>
         </div>
       </div>
-
-      <div class="nav-item">
-        <span class="dropdown-toggle">Analogue Film Practice ▾</span>
-        <div class="dropdown-menu">
-          <a href="photochemical-techniques.html">Photochemical Techniques</a>
-          <a href="technical-documentation.html">Technical Documentation</a>
-          <a href="darkroom-lab.html">Darkroom / Lab Work</a>
-          <!-- Lab Notes integrado aqui -->
-          <a href="lab-notes.html">Lab Notes</a>
-        </div>
-      </div>
-
-      <a href="writing.html">Writing &amp; Publications</a>
-
-    </nav>
-  </div>
-</header>
-
-    <!-- MAIN CONTENT -->
-    <main class="shell">
-      <section class="hero">
-        <div class="hero-inner">
-          <div class="hero-tag">Artistic work · analogue film · archival practice</div>
-          <h1 class="hero-title">Mariana Torres</h1>
-          <p class="hero-subtitle">
-            Audiovisual archivist and film practitioner working between analogue film techniques,
-            preservation, and experimental moving image.
-          </p>
-          <p class="hero-extra">
-            <span>Lisbon-based</span>·
-            <span>Analogue film · 16mm &amp; 35mm</span>·
-            <span>Research, preservation &amp; artistic practice</span>
-          </p>
-        </div>
-      </section>
-
-      <div class="footer">
-        © <span id="year"></span> Mariana Torres · Analogue Film &amp; Archival Practice
-      </div>
-    </main>
-  </div>
-
-  <script>
-    document.getElementById("year").textContent = new Date().getFullYear();
-  </script>
+    </section>
+  </main>
 </body>
 </html>
+
 
