--- a/navbar.html
+++ b/navbar.html
@@ -1,35 +1,32 @@
-<header class="navbar">
-  <div class="navbar-inner">
+<div class="nav-inner">
+  <!-- LOGO / NOME À ESQUERDA -->
+  <div class="nav-logo">MARIANA <span>TORRES</span></div>
 
-    <!-- LOGO -->
-    <div class="nav-logo">MARIANA <span>TORRES</span></div>
+  <!-- MENU À DIREITA -->
+  <nav class="nav-links">
 
-    <!-- MENU -->
-    <nav class="nav-links">
+    <a href="index.html">Home</a>
+    <a href="about.html">About</a>
 
-      <a href="index.html">Home</a>
-      <a href="about.html">About</a>
-
-      <div class="nav-item">
-        <span class="dropdown-toggle">Projects ▾</span>
-        <div class="dropdown-menu">
-          <a href="artistic-works.html">Artistic Works</a>
-          <a href="research-preservation.html">Research &amp; Preservation Works</a>
-        </div>
+    <div class="nav-item">
+      <span class="dropdown-toggle">Projects ▾</span>
+      <div class="dropdown-menu">
+        <a href="artistic-works.html">Artistic Works</a>
+        <a href="research-preservation.html">Research &amp; Preservation Works</a>
       </div>
+    </div>
 
-      <div class="nav-item">
-        <span class="dropdown-toggle">Analogue Film Practice ▾</span>
-        <div class="dropdown-menu">
-          <a href="photochemical-techniques.html">Photochemical Techniques</a>
-          <a href="technical-documentation.html">Technical Documentation</a>
-          <a href="darkroom-lab.html">Darkroom / Lab Work</a>
-          <a href="lab-notes.html">Lab Notes</a>
-        </div>
+    <div class="nav-item">
+      <span class="dropdown-toggle">Analogue Film Practice ▾</span>
+      <div class="dropdown-menu">
+        <a href="photochemical-techniques.html">Photochemical Techniques</a>
+        <a href="technical-documentation.html">Technical Documentation</a>
+        <a href="darkroom-lab.html">Darkroom / Lab Work</a>
       </div>
+    </div>
 
-      <a href="writing.html">Writing &amp; Publications</a>
+    <a href="writing-publications.html">Writing &amp; Publications</a>
 
-    </nav>
-  </div>
-</header>
+  </nav>
+</div>
+
