--- a/navbar.html
+++ b/navbar.html
@@ -1,32 +1,33 @@
-<div class="nav-inner">
-  <!-- LOGO / NOME À ESQUERDA -->
-  <div class="nav-logo">MARIANA <span>TORRES</span></div>
+<header class="navbar">
+  <div class="navbar-inner">
 
-  <!-- MENU À DIREITA -->
-  <nav class="nav-links">
+    <div class="nav-logo">MARIANA <span>TORRES</span></div>
 
-    <a href="index.html">Home</a>
-    <a href="about.html">About</a>
+    <nav class="nav-links">
 
-    <div class="nav-item">
-      <span class="dropdown-toggle">Projects ▾</span>
-      <div class="dropdown-menu">
-        <a href="artistic-works.html">Artistic Works</a>
-        <a href="research-preservation.html">Research &amp; Preservation Works</a>
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+
+      <div class="nav-item">
+        <span class="dropdown-toggle">Projects ▾</span>
+        <div class="dropdown-menu">
+          <a href="artistic-works.html">Artistic Works</a>
+          <a href="research-preservation.html">Research &amp; Preservation Works</a>
+        </div>
       </div>
-    </div>
 
-    <div class="nav-item">
-      <span class="dropdown-toggle">Analogue Film Practice ▾</span>
-      <div class="dropdown-menu">
-        <a href="photochemical-techniques.html">Photochemical Techniques</a>
-        <a href="technical-documentation.html">Technical Documentation</a>
-        <a href="darkroom-lab.html">Darkroom / Lab Work</a>
+      <div class="nav-item">
+        <span class="dropdown-toggle">Analogue Film Practice ▾</span>
+        <div class="dropdown-menu">
+          <a href="analogue-film.html">Overview</a>
+          <a href="photochemical-techniques.html">Photochemical Techniques</a>
+          <a href="technical-documentation.html">Technical Documentation</a>
+          <a href="darkroom-lab.html">Darkroom / Lab Work</a>
+        </div>
       </div>
-    </div>
 
-    <a href="writing-publications.html">Writing &amp; Publications</a>
+      <a href="writing-publications.html">Writing & Publications</a>
 
-  </nav>
-</div>
-
+    </nav>
+  </div>
+</header>
