--- a/navbar.html
+++ b/navbar.html
@@ -1,33 +1,31 @@
-<header class="navbar">
-  <div class="navbar-inner">
+<header class="site-header">
+  <div class="site-header__inner">
+    <a href="index.html" class="site-brand">MARIANA TORRES</a>
 
-    <div class="nav-logo">MARIANA <span>TORRES</span></div>
+    <nav class="main-nav">
+      <ul class="nav-links">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About / CV / Contact</a></li>
 
-    <nav class="nav-links">
+        <li class="has-dropdown">
+          <a href="projects.html">Projects ▾</a>
+          <ul class="dropdown">
+            <li><a href="artistic-works.html">Artistic Works</a></li>
+            <li><a href="research-preservation.html">Research &amp; Preservation Works</a></li>
+          </ul>
+        </li>
 
-      <a href="index.html">Home</a>
-      <a href="about.html">About</a>
+        <li class="has-dropdown">
+          <a href="analogue-film.html">Analogue Film Practice ▾</a>
+          <ul class="dropdown">
+            <li><a href="photochemical-techniques.html">Photochemical Techniques</a></li>
+            <li><a href="technical-documentation.html">Technical Documentation</a></li>
+            <li><a href="darkroom-lab.html">Darkroom / Lab Work</a></li>
+          </ul>
+        </li>
 
-      <div class="nav-item">
-        <span class="dropdown-toggle">Projects ▾</span>
-        <div class="dropdown-menu">
-          <a href="artistic-works.html">Artistic Works</a>
-          <a href="research-preservation.html">Research &amp; Preservation Works</a>
-        </div>
-      </div>
-
-      <div class="nav-item">
-        <span class="dropdown-toggle">Analogue Film Practice ▾</span>
-        <div class="dropdown-menu">
-          <a href="analogue-film.html">Overview</a>
-          <a href="photochemical-techniques.html">Photochemical Techniques</a>
-          <a href="technical-documentation.html">Technical Documentation</a>
-          <a href="darkroom-lab.html">Darkroom / Lab Work</a>
-        </div>
-      </div>
-
-      <a href="writing-publications.html">Writing & Publications</a>
-
+        <li><a href="writing-publications.html">Writing &amp; Publications</a></li>
+      </ul>
     </nav>
   </div>
 </header>
