--- a/navbar.html
+++ b/navbar.html
@@ -1,31 +1,32 @@
-<header class="site-header">
-  <div class="site-header__inner">
-    <a href="index.html" class="site-brand">MARIANA TORRES</a>
+<nav class="site-nav">
+  <div class="nav-inner">
+    <!-- Marca / Nome à esquerda -->
+    <a href="index.html" class="nav-brand">MARIANA TORRES</a>
 
-    <nav class="main-nav">
-      <ul class="nav-links">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About / CV / Contact</a></li>
+    <!-- Links à direita -->
+    <ul class="nav-links">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about.html">About</a></li>
 
-        <li class="has-dropdown">
-          <a href="projects.html">Projects ▾</a>
-          <ul class="dropdown">
-            <li><a href="artistic-works.html">Artistic Works</a></li>
-            <li><a href="research-preservation.html">Research &amp; Preservation Works</a></li>
-          </ul>
-        </li>
+      <li class="has-dropdown">
+        <a href="projects.html">Projects ▾</a>
+        <ul class="dropdown">
+          <li><a href="artistic-works.html">Artistic Works</a></li>
+          <li><a href="research-preservation.html">Research &amp; Preservation Works</a></li>
+        </ul>
+      </li>
 
-        <li class="has-dropdown">
-          <a href="analogue-film.html">Analogue Film Practice ▾</a>
-          <ul class="dropdown">
-            <li><a href="photochemical-techniques.html">Photochemical Techniques</a></li>
-            <li><a href="technical-documentation.html">Technical Documentation</a></li>
-            <li><a href="darkroom-lab.html">Darkroom / Lab Work</a></li>
-          </ul>
-        </li>
+      <li class="has-dropdown">
+        <a href="analogue-film.html">Analogue Film Practice ▾</a>
+        <ul class="dropdown">
+          <li><a href="photochemical-techniques.html">Photochemical Techniques</a></li>
+          <li><a href="technical-documentation.html">Technical Documentation</a></li>
+          <li><a href="darkroom-lab.html">Darkroom / Lab Work</a></li>
+        </ul>
+      </li>
 
-        <li><a href="writing-publications.html">Writing &amp; Publications</a></li>
-      </ul>
-    </nav>
+      <li><a href="writing-publications.html">Writing &amp; Publications</a></li>
+    </ul>
   </div>
-</header>
+</nav>
+
