--- a/index.html
+++ b/index.html
@@ -203,6 +203,7 @@
 
   <!-- ---------------- HERO SECTION ---------------- -->
   <section class="hero">
+    <div class="gif-bg"></div>
     <h1>MARIANA TORRES</h1>
     <div class="hero-sub">Audiovisual Archivist & Moving Image Practitioner</div>
 
