--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <div class="gif-bg"></div>
   <title>Mariana Torres – Audiovisual Archivist & Moving Image Practitioner</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
