--- a/index.html
+++ b/index.html
@@ -11,19 +11,7 @@
     href="https://fonts.googleapis.com/css2?family=Source+Serif+4:wght@300;400;500;600;700&display=swap"
     rel="stylesheet"
   />
-/* Featured Image Section */
-.featured-image {
-  width: 100%;
-  max-width: 1200px;
-  margin: 40px auto 0;
-}
 
-.featured-image img {
-  width: 100%;
-  height: auto;
-  display: block;
-  border-radius: 4px; /* opcional – fica elegante */
-}
   <style>
     :root {
       --bg-soft: #090b10;
@@ -44,8 +32,6 @@
       -webkit-font-smoothing: antialiased;
       position: relative;
     }
-
-   
 
     /* ---------------- HEADER + MENU ---------------- */
 
@@ -162,7 +148,7 @@
 
     .hero {
       padding-top: 160px; /* compensa altura do header */
-      padding-bottom: 80px;
+      padding-bottom: 40px;
       text-align: center;
       max-width: 730px;
       margin: 0 auto;
@@ -184,6 +170,20 @@
     .hero-text {
       font-size: 1.05rem;
       line-height: 1.75;
+    }
+
+    /* Featured Image Section */
+    .featured-image {
+      width: 100%;
+      max-width: 1200px;
+      margin: 40px auto 0;
+    }
+
+    .featured-image img {
+      width: 100%;
+      height: auto;
+      display: block;
+      border-radius: 4px; /* opcional – fica elegante */
     }
   </style>
 </head>
@@ -237,12 +237,12 @@
       and <strong>analogue film practice</strong>, alongside documentation of projects
       developed with archives, festivals and cultural institutions.
     </p>
-  <section class="featured-image">
-  <img src="pag2.png" alt="Featured Image">
-</section>
+  </section>
 
+  <!-- ---------------- FEATURED IMAGE ---------------- -->
+  <section class="featured-image">
+    <img src="pag2.png" alt="Featured Image">
+  </section>
 
 </body>
 </html>
-
-
